Bug 1343787. Part 2 - move the Register() calls to Load(). r=gerald

MozReview-Commit-ID: 2jjZujE1qH8